Improve i3WM configuration. Improve screenlayout scripts.

--- a/src/.config/i3/config
+++ b/src/.config/i3/config
@@ -194,7 +194,7 @@ mode "$mode_display" {
 #bindsym $mod+c exec gnome-calendar
 #bindsym XF86MonBrightnessDown exec xbacklight -dec 5
 #bindsym XF86MonBrightnessUp exec xbacklight -inc 5
-bindsym $mod+Print exec gnome-screenshot -i
+#bindsym $mod+Print exec gnome-screenshot -i
 bindsym $mod+Return exec $terminal
 bindsym $mod+Shift+Return exec $terminal
 bindsym $mod+Shift+a exec amarok
